[gd_scene load_steps=3 format=2]

[ext_resource path="res://source/menu/TitleScreen.gd" type="Script" id=1]

[sub_resource type="Theme" id=1]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 835.0
margin_top = 360.0
margin_right = 1085.0
margin_bottom = 720.0
custom_constants/separation = 20

[node name="Player1" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 250.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/Player1"]
margin_top = 18.0
margin_right = 86.0
margin_bottom = 32.0
size_flags_horizontal = 3
text = "You"

[node name="OptionButton" type="OptionButton" parent="CenterContainer/VBoxContainer/Player1"]
margin_left = 90.0
margin_right = 250.0
margin_bottom = 50.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 3
text = "Deck"

[node name="Player2" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 70.0
margin_right = 250.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 50 )

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/Player2"]
margin_top = 18.0
margin_right = 86.0
margin_bottom = 32.0
size_flags_horizontal = 3
text = "Enemy"

[node name="OptionButton" type="OptionButton" parent="CenterContainer/VBoxContainer/Player2"]
margin_left = 90.0
margin_right = 250.0
margin_bottom = 50.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 3
text = "Deck"

[node name="Play" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 140.0
margin_right = 250.0
margin_bottom = 240.0
rect_min_size = Vector2( 250, 100 )
text = "Play"

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 260.0
margin_right = 250.0
margin_bottom = 360.0
rect_min_size = Vector2( 250, 100 )
text = "Quit"
[connection signal="pressed" from="CenterContainer/VBoxContainer/Play" to="." method="_on_Play_pressed"]
